--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tas_3</title>
+    <title>Task</title>
 </head>
 <body>
     <h1>Створіть проект додайте 3 файли та створіть коміт</h1>
