--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Task</title>
 </head>
 <body>
-    <h1>Створіть проект додайте 3 файли та створіть коміт</h1>
+    <h1>Clone</h1>
 </body>
 </html>
